--- a/Teacher/teacher_home.html
+++ b/Teacher/teacher_home.html
@@ -4,18 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher Home</title>
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <!-- my css -->
     <link rel="stylesheet" href="../styles/teacher_home.css">
+    <link rel="stylesheet" href="../styles/bar.css">
+    <!-- css for icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"> 
+
 </head>
 <body>
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+        <div class="container-fluid ">
+            <a class="navbar-brand " href="./teacher_home.html">STUDY WITH ME</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="create_question.html">Create Question</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="question_bank.html">Question Bank</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="create_exam.html">Create Exam</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="exam_result.html">Exam Result</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <header>
-        <h1>Welcome to Teacher Portal</h1>
+        <h1 class = "text-center welcome-title fw-bold text-uppercase">Welcome to Teacher Portal</h1>
     </header>
-    <main>
-        <button onclick="location.href='create_question.html'">Create Question</button>
-        <button onclick="location.href='Exam_Result.html'">Exam Result</button>
-        <button onclick="location.href='QuestionBank.html'">Question Bank</button>
-        <button onclick="location.href='create_Exam.html'">Create Exam</button>
-    </main>
+    <div class = "row mb-3">
+            <div class="container">
+                <div class="row justify-content-center gap-3">
+                    <div class="btn-custom col-md-5 text-uppercase" onclick="location.href='create_question.html'">
+                        <i class="fas fa-question-circle fa-2x mb-2"></i>
+                        Create Question
+                    </div>
+                    <div class="btn-custom col-md-5 text-uppercase" onclick="location.href='QuestionBank.html'">
+                        <i class="fas fa-bank fa-2x mb-2"></i>
+                        Question Bank
+                    </div>
+                    <div class="btn-custom col-md-5 text-uppercase" onclick="location.href='create_Exam.html'">
+                        <i class="fas fa-pen-alt fa-2x mb-2"></i>
+                        Create Exam
+                    </div>
+                    <div class="btn-custom col-md-5 text-uppercase" onclick="location.href='Exam_Result.html'">
+                        <i class="fas fa-book fa-2x mb-2"></i>
+                        Exam Result
+                    </div>
+                </div>
+            </div>       
+    </div>
 </body>
 <script src="../script/teacher_home.js"></script>
 </html>
