--- a/Student/student_home.html
+++ b/Student/student_home.html
@@ -4,16 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Home</title>
+    <link rel="icon" type="image/x-icon" href="../images/logo.jpg" />
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <!-- my css -->
+    <link rel="stylesheet" href="../styles/barstu.css">
     <link rel="stylesheet" href="../styles/student_home.css">
+    <!-- css for icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"> 
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+        <div class="container-fluid ">
+            <a class="navbar-brand " href="./student_home.html">STUDY WITH ME</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="Take_Exam.html">Take exam</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Exam_Result.html">Your result</a>
+                    </li>
+                </ul>
+            </div>
+            <a class="icon-link" href = "../Home/sign-in.html">
+                <i class="fas fa-power-off fa-2x mb-2"></i>
+            </a>
+            </div>
+        </div>
+    </nav>
     <header>
-        <h1>Welcome to Student Portal</h1>
+        <h1 class = "text-center welcome-title fw-bold text-uppercase">Welcome to Student Portal</h1>
     </header>
-    <main>
-        <button onclick="location.href='Exam_Result.html'">Exam Result</button>
-        <button onclick="location.href='Take_Exam.html'">Take Exam</button>
-    </main>
+    <div class = "row mb-3">
+            <div class="container">
+                <div class="row justify-content-center gap-3">
+                    <div class="btn-custom col-md-5 text-uppercase" onclick="location.href='Take_Exam.html'">
+                        <i class="fas fa-file-alt fa-2x"></i> 
+                        Take exam
+                    </div>
+                    <div class="btn-custom col-md-5 text-uppercase" onclick="location.href='Exam_Result.html'">
+                        <i class="fas fa-trophy fa-2x"></i> 
+                       Your result
+                    </div>
+                </div>
+            </div>       
+    </div>
+    <script> </script>
 </body>
-<script src="../script/student_home.js"></script>
 </html>
