--- a/Teacher/create_question.html
+++ b/Teacher/create_question.html
@@ -4,22 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teacher Home</title>
+    <title>Create question</title>
+    <link rel="icon" type="image/x-icon" href="../images/logo.jpg" />
     <!-- bootstrap css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <!-- my css -->
     <!-- <link rel="stylesheet" href="../styles/teacher_home.css"> -->
-    <link rel="stylesheet" href="../styles/bar.css">
+    <link rel="stylesheet" href="../styles/barteacher.css">
     <!-- css for icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
     <style>
-        .active {
-            background-color: white;
-        }
-
         .text-bg-info {
             background-color: #DEAA79 !important;
         }
@@ -42,16 +39,20 @@
                         <a class="nav-link active" href="create_question.html">Create Question</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="question_bank.html">Question Bank</a>
+                        <a class="nav-link" href="QuestionBank.html">Question Bank</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="create_exam.html">Create Exam</a>
+                        <a class="nav-link" href="create_Exam.html">Create Exam</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="exam_result.html">Exam Result</a>
+                        <a class="nav-link" href="Exam_Result.html">Exam Result</a>
                     </li>
                 </ul>
             </div>
+            <a class="icon-link" href="../Home/sign-in.html">
+                <i class="fas fa-power-off fa-2x mb-2"></i>
+            </a>
+        </div>
         </div>
     </nav>
     <div class="container">
