--- a/Student/Exam_Result.html
+++ b/Student/Exam_Result.html
@@ -38,7 +38,9 @@
             </div>
         </div>
     </nav>
-    
+    <div>
+        <!-- student result -->
+    </div>
     <script> </script>
 </body>
 </html>
