--- a/Student/Take_Exam.html
+++ b/Student/Take_Exam.html
@@ -38,7 +38,9 @@
             </div>
         </div>
     </nav>
-    
+    <div> 
+        <!-- show question + answer -->
+    </div>
     <script> </script>
 </body>
 </html>
