--- a/Teacher/QuestionBank.html
+++ b/Teacher/QuestionBank.html
@@ -43,5 +43,9 @@
             </div>
         </div>
     </nav>
+    <div>
+        <!-- table of question -->
+    </div>
+    <script></script>
 </body>
 </html>
