--- a/Teacher/create_Exam.html
+++ b/Teacher/create_Exam.html
@@ -44,5 +44,9 @@
             </div>
         </div>
     </nav>
+    <div>
+        <!-- show table of question, tick to get the question -->
+    </div>
+    <script></script>
 </body>
 </html>
