--- a/Home/sign-in.html
+++ b/Home/sign-in.html
@@ -233,12 +233,12 @@
 								<a class="btn-login" id="login_div" href="./sign-in.html">Sign in</a>
 							</div> -->
                         <div class="form-group">
-                            <input type="text" class="form-control mb-3" placeholder="Username">
+                            <input id = "username" name = "username" type="text" class="form-control mb-3" placeholder="Username">
                         </div>
                         <div class="form-group">
                             <input type="password" class="form-control mb-3" placeholder="Password">
                         </div>
-                        <input type="submit" value="Sign in" on-click="signin" class="btn btn-warning mt-4 w-100">
+                        <input id = "password" name = "password" type="submit" value="Sign in" on-click="signin" class="btn btn-warning mt-4 w-100">
                     </div>
                 </div>
             </div>
